# mkdocs-claude-chat

./: .gitignore  CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.specify/memory/: constitution.md
config/: coverage.ini  pytest.ini  ruff.toml
docs/: api.md  architecture.md  configuration.md  contributing.md  index.md  troubleshooting.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: api.md  architecture.md
specs/001-logger-adapter/: plan.md  research.md  spec.md  tasks.md
specs/001-logger-adapter/checklists/: requirements.md
specs/002-assets-injection/: plan.md  research.md  spec.md  tasks.md
specs/002-assets-injection/checklists/: requirements.md
specs/003-plugin-hooks/: plan.md  research.md  spec.md  tasks.md
specs/003-plugin-hooks/checklists/: requirements.md
specs/004-chat-server/: plan.md  research.md  spec.md  tasks.md
specs/004-chat-server/checklists/: requirements.md
specs/004-chat-server/contracts/: chat-api.md
specs/005-chat-widget-ui/: plan.md  research.md  spec.md  tasks.md
specs/005-chat-widget-ui/checklists/: requirements.md
specs/005-chat-widget-ui/contracts/: widget-contract.md
src/mkdocs_ask_claude/: __init__.py
src/mkdocs_ask_claude/_internal/: assets.py  config.py  logger.py  plugin.py  server.py
src/mkdocs_ask_claude/assets/: chat.css  chat.js
src/mkdocs_claude_chat/: __init__.py
src/mkdocs_claude_chat/_internal/: assets.py  config.py  logger.py  plugin.py  server.py  tools.py
src/mkdocs_claude_chat/assets/: chat.css  chat.js
tests/: conftest.py  test_api.py  test_assets.py  test_logger.py  test_plugin.py  test_server.py
