[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "mkdocs-claude-chat"
description = "MkDocs plugin to add a Claude-powered chatbot to your documentation site."
license = "ISC"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mkdocs", "claude", "chatbot", "ai", "llm", "documentation"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "mkdocs>=1.5",
    "claude-agent-sdk>=0.1.50",
    "anyio>=4.0",
    "fastapi>=0.100",
    "uvicorn>=0.27",
]

[project.urls]
Homepage = "https://github.com/your-org/mkdocs-claude-chat"
Documentation = "https://your-org.github.io/mkdocs-claude-chat"
Changelog = "https://your-org.github.io/mkdocs-claude-chat/changelog"
Repository = "https://github.com/your-org/mkdocs-claude-chat"
Issues = "https://github.com/your-org/mkdocs-claude-chat/issues"

[project.entry-points."mkdocs.plugins"]
claude-chat = "mkdocs_claude_chat:MkdocsClaudeChatPlugin"

[tool.pdm.version]
source = "call"
getter = "scripts.get_version:get_version"

[tool.pdm.build]
excludes = ["**/.pytest_cache", "**/.mypy_cache"]
source-includes = [
    "config",
    "docs",
    "scripts",
    "tests",
    "duties.py",
    "mkdocs.yml",
    "*.md",
    "LICENSE",
]

[dependency-groups]
maintain = [
    "build>=1.2",
    "git-changelog>=2.5",
    "twine>=5.1",
    "yore>=0.3.3",
]
ci = [
    "duty>=1.6",
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]
docs = [
    "markdown-callouts>=0.4",
    "markdown-exec>=1.8",
    "mkdocs>=1.6",
    "mkdocs-claude-chat",  # dogfood
    "mkdocs-coverage>=1.0",
    "mkdocs-kroki-plugin>=1.3",
    "mkdocs-llmstxt>=0.2",
    "mkdocs-material>=9.5",
    "mkdocs-section-index>=0.3",
    "mkdocstrings[python]>=0.29",
    # YORE: EOL 3.10: Remove line.
    "tomli>=2.0; python_version < '3.11'",
]

[tool.uv]
default-groups = ["maintain", "ci", "docs"]
